java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testNonAbstractClass85806-hints.pass
LBL_FIX_Make_Class_Abstract
